--- a/opdracht_011_eindeopdracht/about.html
+++ b/opdracht_011_eindeopdracht/about.html
@@ -10,59 +10,61 @@
 </head>
 
 <body>
+
     <div class="grid-container">
+
         <header class="border ">
-
             <h2>Waarom</h2>
-
         </header>
+
         <nav class=" site-nav border ">
             <a href="index.html" class="nav-links">Home</a>
             <a href="about.html" class="nav-links">About</a>
             <a href="form.html" class="nav-links">Aanmelden</a>
-
         </nav>
+
         <main class="border">
 
             <article class="border">
+
                 <h1>Waarom zijn we opzoek naar de nieuwe tijger koning</h1>
 
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias delectus sequi praesentium iure
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias delectus sequi praesentium iure
                     voluptates quas? Iusto nostrum dolor distinctio cum fuga quos nulla, mollitia ullam animi amet,
                     maiores itaque error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nulla culpa
                     consequatur maxime illum ex necessitatibus, non accusamus! Eum eaque porro cupiditate nam possimus
-                    enim dolores expedita suscipit odio distinctio.</p>
+                    enim dolores expedita suscipit odio distinctio.
+                </p>
 
-
-
-
-
-
-
-
+                <ul>
+                    <li><a href="https://en.wikipedia.org/wiki/Tiger_King" target="blank">Meer info klik hier!!</a>
+                    </li>
+                    <li><a href="https://www.netflix.com/nl-en/title/81115994">klik hier als je tigerkig zelf wil
+                            kijken!!</a></li>
+                </ul>
 
             </article>
+
             <br>
+
             <div>
 
                 <iframe class="video border" width="auto" height="auto" src="https://www.youtube.com/embed/acTdxsoa428"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                    allowfullscreen>
+                </iframe>
+
             </div>
 
-
-
-
-
         </main>
+
         <footer class="border">
 
             <h4>gemaakt door sander van meerveld</h4>
 
-
         </footer>
-
 
     </div>
 
