--- a/opdracht_011_eindeopdracht/index.html
+++ b/opdracht_011_eindeopdracht/index.html
@@ -10,20 +10,23 @@
 </head>
 
 <body>
+
     <div class="grid-container">
+
         <header class="border ">
-
             <h2>Tijgers Gezichten</h2>
-
         </header>
+
         <nav class=" site-nav border ">
             <a href="index.html" class="nav-links">Home</a>
             <a href="about.html" class="nav-links">About</a>
             <a href="form.html" class="nav-links">Aanmelden</a>
-
         </nav>
+
         <main class="border">
+
             <article class="border">
+
                 <h1> Rustige Tijger </h1>
 
                 <img src="tiger_vector2.png" class="tigerking">
@@ -31,7 +34,6 @@
                 <ul>
                     <li>wat betekend dit?</li>
                     <li>wat te doen</li>
-
                 </ul>
 
                 <p>
@@ -42,6 +44,7 @@
                 officiis
                 autem unde?
                 </p>
+
                 <p>
                 <h2>Wat te doen</h2>
                 <br>
@@ -49,6 +52,7 @@
                 perspiciatis quaerat dignissimos fugiat animi reprehenderit iure sapiente vitae error, omnis
                 repellendus exercitationem cumque eaque voluptate ipsam.
                 </p>
+
                 <h6>geschreven door Sander van Meerveld</h6>
 
             </article>
@@ -57,12 +61,11 @@
 
                 <h1> Verbaasde Tijger</h1>
 
-                <img src="tiger_vector.png" class="tigerking">
+                <img src="tiger_vector.png" class="tigerking vervelend">
 
                 <ul>
                     <li>wat betekend dit?</li>
                     <li>wat te doen</li>
-
                 </ul>
 
                 <p>
@@ -73,6 +76,7 @@
                 officiis
                 autem unde?
                 </p>
+
                 <p>
                 <h2>Wat te doen</h2>
                 <br>
@@ -80,12 +84,11 @@
                 perspiciatis quaerat dignissimos fugiat animi reprehenderit iure sapiente vitae error, omnis
                 repellendus exercitationem cumque eaque voluptate ipsam.
                 </p>
+
                 <h6>geschreven door Sander van Meerveld</h6>
 
-
-
-
             </article>
+
             <article class="border">
 
                 <h1>Bose Tijger</h1>
@@ -95,7 +98,6 @@
                 <ul>
                     <li>wat betekend dit?</li>
                     <li>wat te doen</li>
-
                 </ul>
 
                 <p>
@@ -106,6 +108,7 @@
                 officiis
                 autem unde?
                 </p>
+
                 <p>
                 <h2>Wat te doen</h2>
                 <br>
@@ -113,9 +116,11 @@
                 perspiciatis quaerat dignissimos fugiat animi reprehenderit iure sapiente vitae error, omnis
                 repellendus exercitationem cumque eaque voluptate ipsam.
                 </p>
+
                 <h6>geschreven door Sander van Meerveld</h6>
 
             </article>
+
             <article class="border">
 
                 <h1>Ben jij de nieuwe tijger koning</h1>
@@ -126,7 +131,6 @@
                     <li>heb jij het om de nieuwe tijger koning te worden</li>
                     <li>voorwaarden</li>
                     <li><a href="form.html" class="article-links">Aanmelden</a></li>
-
                 </ul>
 
                 <p>
@@ -137,6 +141,7 @@
                 officiis
                 autem unde?
                 </p>
+
                 <p>
                 <h2>Wat te doen</h2>
                 <br>
@@ -147,22 +152,19 @@
 
                 <p>
                     Aanmelden klik<a href="form.html" class="article-links">hier.</a>
-
                 </p>
-                <h6>geschreven door Sander van Meerveld</h6>
 
+                <h6>geschreven door Sander van Meerveld</h6>
 
             </article>
 
-
         </main>
+
         <footer class="border">
 
             <h4>gemaakt door sander van meerveld</h4>
 
-
         </footer>
-
 
     </div>
 
